First corrections, animals missing

--- a/smalltwibook.tex
+++ b/smalltwibook.tex
@@ -167,14 +167,14 @@ Twi belongs to the Akan language family and consists of strong dialects like Asa
     \textit{OK. We-lay God under.}
   
   
-  \item[Meda ase. (Medaase.)] Thank you. \\
+  \item[Meda ase (paa/bɛbre). (Medaase.)] Thank you (good/much). \\
     \textit{I-lay under.}
   \item[Meda wo ase. (Meda w'ase.)] Thank you. \\
     \textit{I-lay you under.}
   \item[Menso meda mo ase.] Thank you\texttt{(pl.)} too. \\
     \textit{I-too I-lay you\texttt{(pl.)} under.}
   \item[Nante yie!] Save journey!
-  \item[Mεhu wo akyire! (Akyire!)] See you later!
+  \item[Mεhu wo akyire! (Akyire!)] (I) See you later!
   \item[Yɛbɛhyia!] We will meet!
   \item[Ɔkyena yɛbɛhyia bio.] Tomorrow we'll meet again.
   \item[Afe hyia pa! - Afe nko mmeto yen!] Happy New Year! - May another year come and meet us!
@@ -381,7 +381,7 @@ Often to speak to a person the title/role is prepended.
 
 \chapter{Useful Words and Phrases}
 
-A common one you are going to here all the time is: \textbf{Worekɔ he?} (Sounds more like "Wo-coy?") Where are you going? In Ghana people don’t give too much detail: \textbf{Me kɔ krum.} I’m going to town. A Ghanaian will then say \textbf{Kɔ bra.} Go come. (The equivalent of "come back safely".)
+Sometimes you get a question on the street as a greeting. E.g. \textbf{Worekɔ he?} (Where are you going?) It might be that no answer is expected, but it's always ok to give it short and quick: \textbf{Mekɔ krum.} (I go to town.) - Then you might often hear: \textbf{Kɔ bra.} (Go come.) And you can also use \textbf{Me kɔ ba.} (I go come.) when you leave.
 
 \begin{description}
   \item[ne] and
@@ -397,6 +397,9 @@ A common one you are going to here all the time is: \textbf{Worekɔ he?} (Sounds
   \item[Wo nso wote Twi anaa?] And you too, you speak Twi, right?
   \item[Mepa wo kyɛw kassa breau!] Please speak slowly.
   \item[Wose sɛn?] What do you say?
+  \item[Men te ase.] I do not understand.
+  \item[Maatse.] I got it.
+  \item[Adεn …?] Why …?
   \item[Agoo!?] (When entering a place) Hello, is there someone? Or knocking: \textbf{Kɔkɔɔkɔ}
     \textit{Answer:} \textbf{Amee!} Yes, someone is inside.
   \item[Hwan a?] Who's outside?
@@ -427,10 +430,13 @@ A common one you are going to here all the time is: \textbf{Worekɔ he?} (Sounds
   \item[Ɛnnora/Ɛnnɛ/Ɔkyena yɛ da bɛn?] What day was/is yesterday/today/tomorrow? \\
     \textit{Yesterday/today/tomorrow is day which?}
   \item[Ɛyɛ dɛ.] It's sweet (food).
+  \item[Mafe wo.] I missed you. \\
+    \textit{Answer:} \textbf{Menso saa!} Me too!
   \item[Wo ho yɛ fɛ.] You look beautiful. \\
     \textit{You body is beautiful.}
   \item[Tiafi wɔ ha?] Is there a bathroom? \\
     \textit{Bathroom have here?}
+  \item[Ɛyɛ me ya.] It hurts me.
 \end{description}
 
 
@@ -632,34 +638,34 @@ value.
 
 ~
 
-~
-
-
-
-{\large \textbf{Animals}}
-
-\begin{multicols}{2}
-\begin{description}
-  \item[Adanku] rabbit
-  \item[Afofantɔ] butterfly
-  \item[Akokɔ] chicken
-  \item[Akroma] squirrel
-  \item[Ampan] bat
-  \item[Aponkye] sheep
-  \item[Apɔtrɔ] frog
-  \item[Dabo-Dabo/Dɔkɔ-Dɔkɔ] goat
-  \item[Kro-kro] hawk
-  \item[Mo mma] duck
-  \item[Nantwie] turkey
-  \item[Odwan] cow
-  \item[Ɔkra/Agyinamoa] cat
-  \item[Ɔkraman] dog
-  \item[Opuro] fox
-  \item[Ɔwɔ] snake
-  \item[Pete] vulture
-  \item[Sasakraman] wolf
-\end{description}
-\end{multicols}
+%~
+%
+%
+%
+%{\large \textbf{Animals}}
+%
+%\begin{multicols}{2}
+%\begin{description}
+%  \item[Adanku] rabbit
+%  \item[Afofantɔ] butterfly
+%  \item[Akokɔ] chicken
+%  \item[Akroma] squirrel
+%  \item[Ampan] bat
+%  \item[Aponkye] sheep
+%  \item[Apɔtrɔ] frog
+%  \item[Dabo-Dabo/Dɔkɔ-Dɔkɔ] goat
+%  \item[Kro-kro] hawk
+%  \item[Mo mma] duck
+%  \item[Nantwie] turkey
+%  \item[Odwan] cow
+%  \item[Ɔkra/Agyinamoa] cat
+%  \item[Ɔkraman] dog
+%  \item[Opuro] fox
+%  \item[Ɔwɔ] snake
+%  \item[Pete] vulture
+%  \item[Sasakraman] wolf
+%\end{description}
+%\end{multicols}
 
 {\large \textbf{Fruits and Vegetables}}
 
