--- a/smalltwibook.tex
+++ b/smalltwibook.tex
@@ -360,7 +360,7 @@ Often to speak to a person the title/role is prepended.
 ~
 
 
-\textbf{Negotiation} of verbs are made by prepending \underline{n} to them in most cases. But the consonant is changed if it starts with \underline{d} like \textit{da} which becomes \textit{nna} or \textbf{b} like \textit{bɔ} which becomes \textit{mmɔ}.
+\textbf{Negations} of verbs are made by prepending \underline{n} to them in most cases. But the consonant is changed if it starts with \underline{d} like \textit{da} which becomes \textit{nna} or \textbf{b} like \textit{bɔ} which becomes \textit{mmɔ}.
 
 \begin{description}
   \item[Wontɔ nsuo bio?] You don't buy water again? \\
